@@ -5,6 +5,7 @@ Game:
  + Add new key to show mission panel (default: M)
  + Add chat command “/help”, displays help for chat commands
  + Increase hedgehog limit to 64
+ * Functionality of controllers restored
  * Fix crash when 2 or more controllers were connected
  * Fix extreme amounts of droplets when shooting with minigun into ocean world edge
  * Fix hog being unable to walk after using sniper rifle without firing both shots
